# ig-markets-auth

./: .flake8  .gitignore  Scratchpad.ipynb  azure-pipelines.yml  pyproject.toml  readme.md  setup.py
ig_markets_api/: client.py  config.py
ig_markets_api/auth/: credentials.py  flow.py  helpers.py  requests.py
ig_markets_auth/: __init__.py  config.py  credentials.py  exceptions.py  flow.py  requests.py
tests/: test_ig_markets_api.py
