[tool.poetry]
name = "ig-markets-auth"
version = "1.0.5"
description = "Authentication for IG Markets REST and Streaming APIs"
authors = ["Kevin Courbet <kevin.courbet.contact@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.*,>=3.7.0"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
attrs = "^20.3.0"
httpx = "^0.16.1"
pydantic = {extras = ["email", "dotenv"], version = "^1.7.2"}
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "==6.*,>=6.1.2"
ipykernel = "==5.*,>=5.3.4"


[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "semver"

[tool.dephell.lock]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "poetrylock", path = "poetry.lock"} 

[tool.dephell.pytest]
# read dependencies from poetry format
from = {format = "poetry", path = "pyproject.toml"}
# copy files that are required for tests
tests = ["tests"]
python = "3.7"
# run command `pytest`
command = "pytest -x tests/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
