[tool.poetry]
name = "ig-markets-auth"
version = "1.0.7"
description = "Authentication for IG Markets REST and Streaming APIs"
authors = ["Kevin Courbet <kevin.courbet.contact@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
attrs = "*"
httpx = "*"
pydantic = {extras = ["email", "dotenv"], version = "*"}
loguru = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"
autopep8 = "*"
ipykernel = "*"

[build-system]
requires = [
    "poetry-core>=1.0.0", 
    "setuptools",
    "wheel",
]
build-backend = "poetry.core.masonry.api"
